Add Main Headings

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <title></title>
+    <title>Excursion</title>
   </head>
   <body>
-    <h1>Title</h1>
+    <h2>Discover hidden places in the world around you</h2>
+      <a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a>
+    <h3> Your personal travel guide </h3>
+    <p> Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a>
+    <p> copyright Excursion </p>
   </body>
     
 </html>
