--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h2>Discover hidden places in the world around you</h2>
-      <a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a>
+      <dev class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></dev>
     <h3> Your personal travel guide </h3>
-    <p> Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <dev class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></dev>
     <h2>Coming Soon for iPhone and Android</h2>
-    <a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a>
-    <p> copyright Excursion </p>
+      <dev class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></dev>
+    <dev class="copy"><p> copyright Excursion </p></dev>
   </body>
     
 </html>
