Fix divs and begin video

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   </head>
   <body>
     <h2>Discover hidden places in the world around you</h2>
-      <dev class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></dev>
+      <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
+    <div class="video"><video src=""></video>
     <h3> Your personal travel guide </h3>
-    <dev class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></dev>
+    <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
     <h2>Coming Soon for iPhone and Android</h2>
-      <dev class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></dev>
-    <dev class="copy"><p> copyright Excursion </p></dev>
+      <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
+    <div class="copy"><p> copyright Excursion </p></div>
   </body>
     
 </html>
