--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <h2>Discover hidden places in the world around you</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
-      <div class="video"><p><video src=""></video></p>
+      <div class="video"><p><video src="excursions/resources/css/excursion.mp4"></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
-        <p><image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
-           <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
+        <p><image src=""/>
+           <image src=""/>
         </p>
     <h2>Coming Soon for iPhone and Android</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
