--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="video"><p><video src="excursions/resources/css/excursion.mp4"></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
-        <p><image src=""/>
+        <p><image src="excursions/resources/css/camp.jpg"/>
            <image src=""/>
         </p>
     <h2>Coming Soon for iPhone and Android</h2>
