Fix links again

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <div class="video"><p><video src="excursions/resources/css/excursion.mp4"></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
-        <p><image src="excursions/resources/css/camp.jpg"/>
-           <image src="excursions/resources/css/phone.png"/>
+        <p><image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
+           <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
         </p>
     <h2>Coming Soon for iPhone and Android</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
