--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/></p>
     <h2>Coming Soon for iPhone and Android</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
-    <div class="copy"><p> copyright Excursion </p></div>
+    <div class="copy"><p> "&copy; Excursion </p></div>
   </body>
     
 </html>
