--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="video"><p><video src="excursions/resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
-        <p><image src=""/></p>
+        <p><image src="excursions/resources/images/camp.jpg"/></p>
            <image src=""/></p>
     <h2>Coming Soon for iPhone and Android</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
