--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h2>Discover hidden places in the world around you</h2>
-      <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
+      <div class="link"><a href="">Download Excursion (Coming soon!)</a></div>
       <div class="video"><p><video src="excursions/resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
