fix image path and video path

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <h2>Discover hidden places in the world around you</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
-      <div class="video"><p><video src="excursions/resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video></p>
+      <div class="video"><p><video src="./resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video></p>
     <h3> Your personal travel guide </h3>
       <div class="describe"><p> Excursion remembers places you like, and recommends new points of interest around you.</p></div>
-        <p><image src="excursions/resources/images/camp.jpg"/></p>
-           <image src="excursions/resources/images/phone.png"/></p>
+        <p><image src="./resources/images/camp.jpg"/></p>
+           <image src="./resources/images/phone.png"/></p>
     <h2>Coming Soon for iPhone and Android</h2>
       <div class="link"><a href="https://physicschick.github.io/excursions/">Download Excursion (Coming soon!)</a></div>
     <div class="copy"><p> "&copy; Excursion </p></div>
